corrects spacing in my space area to account for widget header style changes

--- a/src/components/PageHeader/PageHeader.module.scss
+++ b/src/components/PageHeader/PageHeader.module.scss
@@ -2,7 +2,6 @@
 
 .PageHeader {
   color: var(--text);
-  @include u-padding-bottom(4);
 
   h1 {
     text-transform: uppercase;
