--- a/src/components/MySpace/MySpace.module.scss
+++ b/src/components/MySpace/MySpace.module.scss
@@ -24,6 +24,5 @@
 
   .featuredShortcuts {
     width: 100%;
-    margin-bottom: 1rem;
   }
 }
